# maestro-decisioning-demo

./: .databricksignore  .gitignore  CLAUDE.md  Makefile  README.md  app.yaml  main.py  pyproject.toml  skills-lock.json
.humantokens/: architecture-decision.html  architecture.dot  codebase-explainer.html  final-architecture-decision.html
app_skills/cdp-reasoning/: SKILL.md
data/: seed_tables.py  seed_tables.sql
docs/: maestro-deck.html  troubleshooting-fastapi-dbos.md
docs/superpowers/plans/: 2026-05-12-unified-beat-flow.md
docs/superpowers/specs/: 2026-05-12-unified-beat-flow-design.md
files/: 00-README.md  beat-2-build-brief.html  beat-2-build-brief.md  fluttershy-demo-design-doc.md  fluttershy-demo-spec.html  fluttershy-demo-spec.md  fluttershy-demo-storyboard.html
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  pubspec.yaml  vite.config.ts
frontend/lib/: main.dart
frontend/lib/animations/: card_animations.dart  (+1 more)
frontend/src/: App.tsx  index.css
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
scripts/: run_demo.py  test_lakebase_dbos.py  test_mlflow_tracing.py  test_skills_trace.py
skills/automl-propensity/: SKILL.md
skills/greet/: SKILL.md
src/maestro/: __init__.py  agent.py  app.py  bootstrap.py  email_agent.py  models.py  re_evaluate.py  send.py  synthetic.py  tools.py  workflow.py
tests/: test_agent.py  test_app_endpoints.py  test_beat2_to_beat3.py  test_email_agent.py  test_models.py  test_re_evaluate.py  test_send.py  test_system.py  test_tools.py  test_unified_flow.py  test_workflow.py
(+58 files in other folders)
