[project]
name = "maestro"
version = "0.1.0"
description = "Agentic CDP demo — cross-campaign optimization on Databricks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-connect>=16.1.7",
    "databricks-openai>=0.15.0",
    "databricks-sdk>=0.106.0",
    "dbos>=2.19.0",
    "mlflow>=3.11.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-ai>=1.89.1",
    "pydantic-ai-skills>=0.9.0",
    "sqlalchemy>=2.0.49",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring live services (LLM, Lakebase)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/maestro"]
